Fix collapsing nav bug

--- a/packages/core/src/ui/TitleBar.module.css
+++ b/packages/core/src/ui/TitleBar.module.css
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: stretch;
+  height: 100%;
 }
 
 .mid {
